//
// Licensed to the Apache Software Foundation (ASF) under one
// or more contributor license agreements.  See the NOTICE file
// distributed with this work for additional information
// regarding copyright ownership.  The ASF licenses this file
// to you under the Apache License, Version 2.0 (the
// "License"); you may not use this file except in compliance
// with the License.  You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";
option java_package = "org.apache.omid.proto";
option optimize_for = SPEED;

message Request {
    TimestampRequest timestampRequest = 1;
    CommitRequest commitRequest = 2;
    HandshakeRequest handshakeRequest = 3;
    FenceRequest fenceRequest = 4;
}

message TimestampRequest {
}

message CommitRequest {
    int64 startTimestamp = 1;
    bool isRetry = 2;
    repeated int64 cellId = 3;
    repeated int64 TableId = 4;
}

message FenceRequest {
    int64 TableId = 1;
}

message Response {
    TimestampResponse timestampResponse = 1;
    CommitResponse commitResponse = 2;
    HandshakeResponse handshakeResponse = 3;
    FenceResponse fenceResponse = 4;
}

message TimestampResponse {
    int64 startTimestamp = 1;
}

message FenceResponse {
    int64 TableId = 1;
    int64 FenceId = 2;
}

message CommitResponse {
    bool aborted = 1;
    int64 startTimestamp = 2;
    int64 commitTimestamp = 3;
}

message Capabilities {
    // place here the capabilities a client has to have
    // to pass the handshake
}

message HandshakeRequest {
    Capabilities clientCapabilities = 1;
}

message HandshakeResponse {
    bool clientCompatible = 1;
    Capabilities serverCapabilities = 2;
    bool lowLatency = 3;
}

message Transaction {
    int64 timestamp = 1;
    int64 readTimestamp = 2;
    int32 visibilityLevel = 3;
    int64 epoch = 4;
}
